--- a/.github/workflows/resources_workflow.yml
+++ b/.github/workflows/resources_workflow.yml
@@ -5,7 +5,7 @@ name: create-cloudformation-stack
 on:
   # Manual trigger using the workflow_dispatch event
   workflow_dispatch:
-jobs: # Jobs defined in the workflow
+jobs: 
   create-stack:
     runs-on: ubuntu-latest
     steps:
